[package]
description = "Parser for the Kerberos protocol"
license = "MIT/Apache-2.0"
keywords = ["Kerberos","parser","nom"]
homepage = "https://github.com/rusticata/kerberos-parser"
repository = "https://github.com/rusticata/kerberos-parser.git"
name = "kerberos-parser"
version = "0.7.1"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "benches/*.rs",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
nom = "7.0"
rusticata-macros = "4.0"
der-parser = "8.2.0"

[badges]
travis-ci = { repository = "rusticata/kerberos-parser" }
