[package]
description = "Parser for the Kerberos protocol"
license = "MIT/Apache-2.0"
keywords = ["Kerberos","parser","nom"]
homepage = "https://github.com/rusticata/kerberos-parser"
repository = "https://github.com/rusticata/kerberos-parser.git"
name = "kerberos-parser"
version = "0.9.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"
rust-version = "1.63"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
nom = "7.0"
rusticata-macros = "5.0"
der-parser = "10.0"

[badges]
travis-ci = { repository = "rusticata/kerberos-parser" }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "asn1_rs",
  "asn1_rs::*",
  "nom",
  "nom::*",
]
